--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="card">
-    <header>
+  <main >
+   <article class="card">
       <img src="./images/image-qr-code.png" alt="QR code" class="qrCode">
-    </header>
-
-    <main >
-      <h2>Improve your front-end skills by building projects</h2>
+      <h1>Improve your front-end skills by building projects</h2>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </h1>
+    </article>
     </main>
-  </div>
+  
 
   <footer>
     <div class="attribution">
