--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     </main>
   
 
-  <footer>
-    <div class="attribution">
+  <footer class="attribution">
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
       <p>Coded by <a href="#">Yasmine San</a>.</p>
-    </div>
   </footer>
 </body>
 
